Bug 1601907 - Disable a code path when built with libstdc++ 6 and below r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D56298